monitoring/logs/kustomize/overlays/aws/mainnet/resource_override.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: log-monitoring
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          resources:
            requests:
              cpu: 1
              memory: 1.75Gi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: log-monitoring
spec:
  template:
    spec:
      containers:
        - name: kibana
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
